# test_evraz

./: .env  .gitignore  docker-compose.yml
src/: Dockerfile  pyproject.toml
src/ZMK/: admin.py  apps.py  models.py
src/ZMK/migrations/: 0001_initial.py  0002_alter_zmk_title.py  0003_rtc_upd_alter_rtcobject_rtc.py  0004_alter_rtc_upd_alter_rtcobject_rtc.py
src/config/: settings.py  urls.py
src/import_data/: serializers.py  service.py  urls.py  views.py
